# minicraft_plus_plus

./: .gitmodules  CMakeLists.txt  IDEAS.txt  README.md  TODO.txt  icon.svg.import  main.tscn  project.godot
actors/characters/: character.gd  character.gd.uid  character.tscn  character_sprite.gd  character_sprite.gd.uid  controller.gd  controller.gd.uid  human.tscn  humanoid.tscn  humanoid_sprite.gd.uid  player_controller.gd.uid  player_controller.tscn
addons/beehave/icons/: cooldown.svg.import  delayer.svg.import  repeater.svg.import  simple_parallel.svg.import  until_fail.svg.import
lib/FastNoiseLite/: CMakeLists.txt
res/shaders/: obj_model.vert  sampler.comp
res/sounds/: destroyed_tile_1.bfxr  destroyed_tile_2.bfxr  placed_tile_1.bfxr
res/textures/: hotbar.xcf  inventory.xcf  spritesheet.xcf
resources/: bot_shader.tres  bot_shader_material.tres  palette.ase  spritesheet.ase  spritesheet.png.import
scenes/: ai.tscn  bot.tscn  bullet.tscn  dummy.tscn  level.tscn  machine_gun.tscn  main.tscn  player.tscn  weapon.tscn
scripts/: bot.gd  bot.gd.uid  bullet.gd  bullet.gd.uid  controller.gd  controller.gd.uid  player.gd  player.gd.uid  weapon.gd  weapon.gd.uid
scripts/ai/: face_target.gd  face_target.gd.uid  has_investigate_locations.gd  has_investigate_locations.gd.uid  has_known_actors.gd  has_known_actors.gd.uid  idle.gd  idle.gd.uid  init.gd  init.gd.uid  is_facing_target.gd  is_facing_target.gd.uid  move_to_investigate_location.gd  move_to_investigate_location.gd.uid  pick_investigate_location.gd  pick_investigate_location.gd.uid  shoot.gd  shoot.gd.uid  update_awareness.gd  update_awareness.gd.uid
src/: ai_controller.cpp  ai_controller.hpp  app.cpp  app.hpp  assert.hpp  audio.cpp  audio.hpp  camera.cpp  camera.hpp  chest_entity.cpp  chest_entity.hpp  chest_inventory.cpp  chest_inventory.hpp  color.cpp  color.hpp  console.cpp  console.hpp  controller.cpp  controller.hpp  crafting_table_entity.cpp  crafting_table_entity.hpp  debug_group.cpp  debug_group.hpp  entity.cpp  entity.hpp  fixed_string.hpp  furnace_entity.cpp  furnace_entity.hpp  furniture_entity.cpp  furniture_entity.hpp  gen.cpp  gen.hpp  humanoid_entity.cpp  humanoid_entity.hpp  humanoid_inventory.cpp  humanoid_inventory.hpp  id.hpp  input.cpp  input.hpp  inventory.cpp  (+75 more)
src/entities/: mob.hpp
src/entity/: anvil.cpp  anvil.hpp  chest.cpp  chest.hpp  controller.cpp  controller.hpp  creature.cpp  creature.hpp  furnace.cpp  furnace.hpp  furniture.cpp  furniture.hpp  hostile_controller.cpp  hostile_controller.hpp  humanoid.cpp  humanoid.hpp  item.cpp  item.hpp  mob.cpp  mob.hpp  particle.cpp  particle.hpp  player.cpp  player.hpp  recipe.cpp  recipe.hpp  sheep.cpp  sheep.hpp  spider.cpp  spider.hpp  workbench.cpp  workbench.hpp  zombie.cpp  zombie.hpp
src/entity/controller/: attack.cpp  attack.hpp  creature.cpp  creature.hpp  melee.cpp  melee.hpp  npc.cpp  npc.hpp  player.cpp  player.hpp
src/minicraft++/: assert.hpp  audio.cpp  audio.hpp  color.cpp  color.hpp  console.cpp  console.hpp  gen.cpp  gen.hpp  input.cpp  input.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp  level.cpp  level.hpp  log.hpp  main.cpp  menu.cpp  menu.hpp  random.cpp  random.hpp  renderer.cpp  renderer.hpp  sprite.cpp  sprite.hpp  tile.cpp  tile.hpp  util.cpp  util.hpp  version.hpp  world.cpp  world.hpp
src/minicraft++/entity/: entity.cpp  entity.hpp  item.cpp  item.hpp  mount.cpp  mount.hpp
src/minicraft++/entity/controller/: controller.cpp  controller.hpp  creature.cpp  creature.hpp  melee.cpp  melee.hpp  mount.cpp  mount.hpp  npc.cpp  npc.hpp  player.cpp  player.hpp
src/minicraft++/entity/furniture/: anvil.cpp  anvil.hpp  campfire.cpp  campfire.hpp  chest.cpp  chest.hpp  furnace.cpp  furnace.hpp  furniture.cpp  furniture.hpp  lantern.cpp  lantern.hpp  recipe.cpp  recipe.hpp  workbench.cpp  workbench.hpp
src/minicraft++/entity/mob/: boat.cpp  boat.hpp  cow.cpp  cow.hpp  creature.cpp  creature.hpp  horse.cpp  horse.hpp  humanoid.cpp  humanoid.hpp  minecart.cpp  minecart.hpp  mob.cpp  mob.hpp  mount.cpp  mount.hpp  player.cpp  player.hpp  sheep.cpp  sheep.hpp  slime.cpp  slime.hpp  spider.cpp  spider.hpp  vehicle.cpp  vehicle.hpp  zombie.cpp  zombie.hpp
src/minicraft++/entity/particle/: emitter.cpp  emitter.hpp  hit.cpp  hit.hpp  particle.cpp  particle.hpp
src/minicraft++/entity/projectile/: arrow.cpp  arrow.hpp  projectile.cpp  projectile.hpp
src/minicraft++/level/: level.cpp  level.hpp  surface.cpp  surface.hpp  underground.cpp  underground.hpp
